feat: Ajout du logo et favicon
- Création d'un logo SVG moderne avec cœur et croissant de lune
- Ajout des méta-tags pour une meilleure intégration mobile
- Configuration du favicon et de l'apple-touch-icon
- Mise à jour des titres et descriptions

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
+    <link rel="apple-touch-icon" href="/src/assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Soulful Connections - Site de rencontre premium pour musulmans" />
+    <meta name="theme-color" content="#4F46E5" />
+    <meta name="description" content="My Muqabala - Trouvez l'amour selon vos valeurs" />
     <meta property="og:image" content="/og-image.png" />
-    <title>Soulful Connections</title>
+    <title>My Muqabala</title>
   </head>
   <body>
     <div id="root"></div>
