--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
@@ -8,9 +8,11 @@
     <meta name="theme-color" content="#4F46E5" />
     <meta name="description" content="My Muqabala - Trouvez l'amour selon vos valeurs" />
     <meta property="og:image" content="/og-image.png" />
+    <meta name="google" content="notranslate" />
+    <meta http-equiv="Content-Language" content="fr" />
     <title>My Muqabala</title>
   </head>
-  <body>
+  <body class="notranslate">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
